--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <script src = "app.js" type = "text/javaScript"></script>
 </head>
 <body>
-    
+    <h1>Stopwatch</h1>
+    <div class = "container">
+        <div class = "display">
+            00:00:00
+        </div>
+        <div class = "buttons">
+            <button id = "start">Start</button>
+            <button id = "Stop">Stop</button>
+            <button id = "Reset">Reset</button>
+
+        </div>
+    </div>
 </body>
 </html>
