--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src = "app.js" type = "text/javaScript"></script>
 </head>
 <body>
-    <h1>Stopwatch</h1>
+    <h1 class = "hero">Stopwatch</h1>
     <div class = "container">
         <div class = "display">
             00:00:00
