--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class = "hero">Stopwatch</h1>
     <div class = "container">
-        <div class = "display">
+        <div id = "display">
             00:00:00
         </div>
         <div class = "buttons">
