--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             00:00:00
         </div>
         <div class = "buttons">
-            <button id = "start">Start</button>
-            <button id = "Stop">Stop</button>
-            <button id = "Reset">Reset</button>
+            <button id = "start" onclick="startButton()">Start</button>
+            <button id = "Stop" onclick="stopButton()">Stop</button>
+            <button id = "Reset" onclick = "resetButton()" >Reset</button>
 
         </div>
     </div>
