style: styled the page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>
 <body>
     <h1 class = "hero">Stopwatch</h1>
+    <hr/>
     <div class = "container">
-        <div class = "display-time" id = "display">
-            00:00:00
+        <div class = "display">
+            <div class ="display__circle">
+                <div class="display__time" id="display-time">
+                    00:00:00
+                </div>
+            </div>
         </div>
         <div class = "buttons">
             <button id = "start" onclick="startButton()">Start</button>
